deployment/ingress.yaml
#
# The load balancer for our NodeJS API, which exposes it over port 80
# The below host name is configured on the host PC in the /etc/hosts file
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapi-ingress
spec:
  tls:
    - hosts:
        - nodeapi.mycompany.com
      secretName: mycompany-com-tls
  rules:
    - host: nodeapi.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapi-svc
                port:
                  number: 80
